Push changes for computer migration